Ajustes em componente Telefone

--- a/src/app/components/socios/socios.component.html
+++ b/src/app/components/socios/socios.component.html
@@ -40,7 +40,7 @@
                   </div>
                   <div class="row" class="col-lg-6">
                       <div class="form-actions">
-                          <button type="submit" [disabled]="!formSocio.valid" class="btn btn-success"><i class="fa fa-check"></i> Continuar</button>
+                          <button type="submit" [disabled]="!formSocio.valid" class="btn btn-success"><i class="fa fa-check"></i> Adicionar</button>
                       </div>
                   </div>
               </form>
