Form components Clientes

--- a/src/app/components/bancarios/bancarios.component.html
+++ b/src/app/components/bancarios/bancarios.component.html
@@ -5,7 +5,7 @@
               <h2 class="card-title">Dados bancários</h2>
 
               <h4 class="card-subtitle" style="margin-bottom: 30px;">
-                Preencha os capos informando seus dados bancários.
+                Preencha os campos informando seus dados bancários.
               </h4>
 
               <div class="clear"></div>
